finished setting up route for new run

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,21 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+  <header>
+    <h2>Run Timer</h2>
+  </header>
+  <div class="container">
+    <ul class=input-list>
+     <li class=input-list__header><h1>New Run</h1></li>
+     <li class=input-list__time><input type="text" name="name" value="" placeholder="Run Time"></li>
+     <li class=input-list__time><input type="text" name="name" value="" placeholder="Run Time"></li>
+     <li class=input-list__time><input type="text" name="name" value="" placeholder="Run Time"></li>
+  </ul>
+  <div class="new-run__buttons">
+    <button class="new-run__buttons-cancel">CANCEL</button>
+    <button class="new-run__buttons-save">SAVE</button>
+  </div>
+    </div>
   <div id="outlet"></div>
 
   <script src="/vendor.js" charset="utf-8"></script>
